fix 404 text alignment

--- a/frontend/src/pages/NotFound/styles.module.scss
+++ b/frontend/src/pages/NotFound/styles.module.scss
@@ -19,6 +19,7 @@
 
 		p {
 			color: $gray-ten;
+			text-align: center;
 		}
 
 		span {
